@@ -3,7 +3,7 @@
 *                                                                      *
 * This file is part of the FINAL CUT widget toolkit                    *
 *                                                                      *
-* Copyright 2018-2021 Markus Gans                                      *
+* Copyright 2018-2022 Markus Gans                                      *
 *                                                                      *
 * FINAL CUT is free software; you can redistribute it and/or modify    *
 * it under the terms of the GNU Lesser General Public License as       *
@@ -527,7 +527,6 @@ void FKeyboard::parseKeyBuffer()
       {
         key = fkey;
         mouseTracking();
-        fifo_offset = int(stringLength(fifo_buf));
         break;
       }
 
